--- a/package.json
+++ b/package.json
@@ -1,34 +1,11 @@
 {
-  "name": "@go-task/cli",
-  "version": "3.38.0",
-  "description": "A task runner / simpler Make alternative written in Go",
-  "scripts": {
-    "postinstall": "go-npm install",
-    "preuninstall": "go-npm uninstall"
+  "name": "hardhat-project",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "hardhat": "^2.17.1"
   },
-  "goBinary": {
-    "name": "task",
-    "path": "./bin",
-    "url": "https://github.com/go-task/task/releases/download/v{{version}}/task_{{platform}}_{{arch}}{{archive_ext}}"
-  },
-  "files": [],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/go-task/task.git"
-  },
-  "keywords": [
-    "task",
-    "taskfile",
-    "build-tool",
-    "task-runner"
-  ],
-  "author": "Andrey Nering",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/go-task/task/issues"
-  },
-  "homepage": "https://taskfile.dev",
   "dependencies": {
-    "@go-task/go-npm": "^0.2.0"
+    "@openzeppelin/contracts": "^4.9.3",
+    "@swisstronik/utils": "^1.2.1"
   }
 }
